fix: table/card view switch flicker issue and card button style (#1445)

--- a/src/pages/TeamDashboard/TeamBasicInfo/index.less
+++ b/src/pages/TeamDashboard/TeamBasicInfo/index.less
@@ -206,9 +206,10 @@
           }
           .value{
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-start;
             align-items: center;
             margin-top: 16px;
+            gap: 16px;
             .statusText {
               width: 62px;
               padding: 2px 0px;
@@ -219,7 +220,7 @@
             }
             .component {
               color: #717179;
-              font-size: 16px;
+              font-size: 14px;
             }
           }
           .updateTime {
@@ -228,10 +229,10 @@
             margin-top: 16px;
           }
           .btn{
-            color: @primary-color;
+            color: #717179;
             position: absolute;
             right: 12px;
-            top: 14%;
+            top: 16px;
             display: flex;
             align-items: center;
             .icon {
@@ -240,10 +241,51 @@
             > div{
               display: flex;
               align-items: center;
+              padding: 2px 8px;
+              border-radius: 3px;
+              border: 1px solid transparent;
+              > svg {
+                path {
+                  fill: #717179;
+                }
+              }
+              &:hover{
+                color: @primary-color;
+                border: 1px solid rgba(25, 92, 163, 0.15);
+                > svg {
+                  path {
+                    fill: @primary-color;
+                  }
+                }
+              }
             }
           }
           .visterBtn {
-            margin-left: 10px;
+            margin-left: 4px;
+            padding: 2px 8px;
+            border-radius: 3px;
+            border: 1px solid transparent;
+            > a {
+              color: #717179;
+            }
+            > svg {
+              fill: #717179;
+              path {
+                fill: #717179;
+              }
+            }
+            &:hover{
+              border: 1px solid rgba(25, 92, 163, 0.15);
+              > a {
+                color: @primary-color;
+              }
+              > svg {
+                fill: @primary-color;
+                path {
+                  fill: @primary-color;
+                }
+              }
+            }
           }
       }
     }
